# Nebula-Command

./: .env.example  .env.production.clean  .env.production.ready  .env.template  .gitignore  .replit  .sops.yaml  AI_FEATURES_AUDIT.md  AI_FEATURES_VERIFICATION.md  CHANGELOG.md  CHECK_JARVIS_ERROR.sh  CLEANUP_SUMMARY.md  CODE_SERVER_AND_JARVIS_IDE_QUICKREF.md  COMPLETE_FEATURE_LIST.md  COMPLETE_FRONTEND_FIX.sh  COMPREHENSIVE_AUDIT_2025-11-15.md  COMPREHENSIVE_FEATURE_TEST.sh  COMPREHENSIVE_FIX_GUIDE.md  Caddyfile  Caddyfile.backup  DATABASE_CONFIG_FIX.md  DATABASE_MIGRATION_GUIDE.md  DEEP_INTEGRATION_TEST.sh  DEMO_FEATURES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCRIPTS_FIX_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SYSTEM_COMPLETE.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_ALL_FIXES.sh  DEPLOY_AND_TEST.sh  DEPLOY_FACTS_FIX.md  DEPLOY_FIXES.md  DEPLOY_NOW.md  DEPLOY_NOW.sh  DIAGNOSE_SITES.sh  DNS_CONFIGURED_NEXT_STEPS.md  FEATURE_PROPOSALS.md  FEATURE_STATUS.md  (+99 more)
.githooks/: pre-push
attached_assets/: Pasted---1763039629398_1763039629398.txt  Pasted---1763039879822_1763039879822.txt  Pasted-evin-host-contain-HomeLabHub-On-your-Ubuntu-server-create-the-fixed-app-py-cat-home-evin-co-1763040088477_1763040088477.txt
cli/: replit_dev_console.py
config/: README.md  domains.yml
deployment/: CODE_SERVER_FIX_SUMMARY.md  DEPLOYMENT_COMPLETION_REPORT.md  DEPLOYMENT_README.md  FIX_DATABASE_USERS.sh  FIX_EVERYTHING_NOW.sh  ORCHESTRATOR_QUICKSTART.md  PIPELINE_GUIDE.md  PIPELINE_QUICKSTART.md  README.md  RUN_THIS_ON_UBUNTU.md  TROUBLESHOOTING_VNC_CODE_SERVER.md  (+9 more)
(+1574 files in other folders)
